snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.module.sha1
a982b053929446bfa969722228b4b7d9cdf0e37c